# ask-my-pdf

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  run.sh  setup.cfg  setup.py
askmypdf/: .env_temp  __init__.py  app.py  embeddings.py  logger.py  prepare_data.py  rag_chain.py  vector_store.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
notebooks/: askmypdf_walkthrough.ipynb
src/: __init__.py  app.py  embeddings.py  llm.py  logger.py  prepare_data.py  rag_chain.py  vector_store.py
