[metadata]
name = askmypdf
version = 0.0.1
author = Nikos Karastathis
author_email = nkarast@gmail.com
description = An example PDF RAG app with UI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nkarast/ask-my-pdf/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = askmypdf
